// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextualBadge component rendering it should render according to theme: ContextualBadge Custom Theme 1`] = `
<span
  className="sc-bdVaJa fGctOC"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 1`] = `
<span
  className="sc-bdVaJa fGctOC"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 2`] = `
<span
  className="sc-bdVaJa bqTCuD"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 3`] = `
<span
  className="sc-bdVaJa jCPTgv"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 4`] = `
<span
  className="sc-bdVaJa jUDhJV"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 5`] = `
<span
  className="sc-bdVaJa fWwmAx"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 6`] = `
<span
  className="sc-bdVaJa gEQsOp"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 7`] = `
<span
  className="sc-bdVaJa eiIHwx"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 8`] = `
<span
  className="sc-bdVaJa dDWZpC"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render each type: ContextualBadge Types 1`] = `
<span
  className="sc-bdVaJa fGctOC"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render the default color and default type: ContextualBadge Default Color And Type 1`] = `
<span
  className="sc-bdVaJa fGctOC"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</span>
`;
